細かな修正

--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -6,6 +6,15 @@
 	box-shadow: 2px 2px 10px rgba($color: #000, $alpha: 0.25);
 }
 
+.blog-card a {
+	transition: opacity 0.3s ease;
+	will-change: opacity;
+}
+
+.blog-card a:hover {
+	opacity: $opacity-hover;
+}
+
 .blog-card:not(:first-child) {
 	margin-top: rem(40);
 
@@ -49,6 +58,13 @@
 }
 
 .blog-card__title-text {
+	font-family: $font-family-jp-sans;
+	font-size: rem(16);
+	font-weight: $font-weight-medium;
+	letter-spacing: 0;
+	line-height: calc(24 / 16);
+	color: $color-text;
+
 	display: -webkit-box;
 	overflow: hidden;
 	-webkit-box-orient: vertical;
