--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -115,7 +115,7 @@ select::-ms-expand {
 a {
   text-decoration: none;
   color: inherit;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s ease;
 }
 
 a:hover {
