--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -78,7 +78,7 @@
 .header__sp-nav {
 
 	padding-top: rem(21);
-	padding-left: rem(15);
+	// padding-left: rem(15);
 	// padding-left: $padding-sp;
 	padding-bottom: $padding-sp;
 
