--- a/src/sass/page/_sp-nav.scss
+++ b/src/sass/page/_sp-nav.scss
@@ -29,9 +29,9 @@
 }
 
 .sp-nav__wrap {
-	margin-top: max(rem(37), calc(rem(37) + (100vh - rem(667)) * 0.5));
+	margin-top: max(rem(32), calc(rem(32) + (100vh - rem(667)) * 0.5));
 	width: 100%;
-	max-width: rem(385);
+	max-width: rem(400);
 	margin-left: auto;
 	margin-right: auto;
 
@@ -40,30 +40,14 @@
 	}
 }
 
-.sp-nav__wrap.sp-nav__wrap--footer {
-	margin-top: rem(32);
-
-	@include mq('md') {
-		margin-top: rem(16);
-		max-width: initial;
-	}
+.sp-nav__menu-items {
+	display: flex;
+	justify-content: space-between;
+	column-gap: min((7 / 375)*100vw, rem(40));
 }
 
-.sp-nav__menu-items {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: auto auto;
-
-	row-gap: rem(24);
-	column-gap: min(calc(rem(17) + (100vw - rem(375)) * 0.5), rem(40));
-	grid-auto-flow: column;
-
-	@include mq('md') {
-		display: flex;
-		// column-gap: rem(120);
-		// column-gap: min(rem(120), rem(120) + (100vw - 90rem) * 0.015);
-		column-gap: min(7.5rem, 7.5rem + (100vw - 90rem) * 0.04);
-	}
+.sp-nav__menu-items-wrap:nth-child(2) {
+	padding-right: rem(26);
 }
 
 .sp-nav__menu-item {}
