--- a/src/sass/page/_footer-nav.scss
+++ b/src/sass/page/_footer-nav.scss
@@ -13,48 +13,31 @@
 }
 
 .ft-nav__wrap {
-	margin-top: max(rem(37), calc(rem(37) + (100vh - rem(667)) * 0.5));
+	margin-top: rem(32);
 	width: 100%;
 	max-width: rem(385);
 	margin-left: auto;
 	margin-right: auto;
 
-	@include mq('md') {
-		display: block;
-	}
-
-	margin-top: rem(32);
 
 	@include mq('md') {
-		margin-top: rem(16);
+		margin-top: rem(12);
 		max-width: initial;
 	}
 }
 
-// .sp-nav__wrap.sp-nav__wrap--footer {
-// 	margin-top: rem(32);
-
-// 	@include mq('md') {
-// 		margin-top: rem(16);
-// 		max-width: initial;
-// 	}
-// }
-
 .ft-nav__menu-items {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: auto auto;
-
-	row-gap: rem(24);
-	column-gap: min(calc(rem(17) + (100vw - rem(375)) * 0.5), rem(40));
-	grid-auto-flow: column;
+	display: flex;
+	column-gap: min((18 / 375)*100vw, rem(40));
 
 	@include mq('md') {
-		display: flex;
-		// column-gap: rem(120);
-		// column-gap: min(rem(120), rem(120) + (100vw - 90rem) * 0.015);
-		column-gap: min(7.5rem, 7.5rem + (100vw - 90rem) * 0.04);
+		column-gap: min(calc(120 / 1440 * 100vw * 1.17), rem(120));
 	}
 }
 
-.sp-nav__menu-item {}
+.ft-nav__menu-items-wrap {
+	@include mq('md') {
+		display: flex;
+		column-gap: min(calc(120 / 1440 * 100vw * 1.17), rem(120));
+	}
+}
