アニメーションの調整、微修正

--- a/src/sass/module/_img-animation.scss
+++ b/src/sass/module/_img-animation.scss
@@ -2,10 +2,17 @@
 
 .img-animation__wrap {
 	position: relative;
+	height: auto;
 }
 
 .img-animation__img {
 	opacity: 0;
+	display: inline-block;
+}
+
+.img-animation__img.img-animation__img--pic {
+	display: block;
+	height: auto;
 }
 
 .img-animation__bg {
