--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -66,6 +66,12 @@
 	height: 100%;
 }
 
+.price__img picture source,
+.price__img picture img {
+	width: 100%;
+	height: auto;
+}
+
 .price__items {
 	margin-top: rem(40);
 
@@ -97,6 +103,7 @@
 	letter-spacing: 0;
 	line-height: calc(24 / 16);
 	color: $color-text;
+
 	@include mq('md') {
 		padding-bottom: rem(5);
 	}
@@ -134,6 +141,6 @@
 	text-align: center;
 
 	@include mq('md') {
-		margin-top: rem(80);
+		margin-top: rem(77);
 	}
 }
