safari/firefoxの表示崩れ修正

--- a/src/sass/page/_sp-nav.scss
+++ b/src/sass/page/_sp-nav.scss
@@ -2,9 +2,12 @@
 
 .sp-nav {}
 
-.sp-nav__logoBlock {
+
+.sp-nav__head {
 	padding-left: rem(15);
 }
+
+.sp-nav__logoBlock {}
 
 .sp-nav__logoBlock a {
 	display: inline-block;
