--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -80,7 +80,7 @@
 	padding-top: rem(21);
 	padding-bottom: $padding-sp;
 
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	position: fixed;
 	right: 0;
