--- a/src/sass/page/_blog.scss
+++ b/src/sass/page/_blog.scss
@@ -1,10 +1,10 @@
 @use "global" as *;
 
 .blog {
-	padding-top: rem(84);
-	padding-bottom: rem(3);
+	margin-top: rem(84);
 
 	@include mq('md') {
+		margin-top: 0;
 		padding-top: rem(100);
 		position: relative;
 	}
