--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -1,11 +1,10 @@
 @use "global" as *;
 
 .campaign {
-	padding-top: rem(44);
-	padding-bottom: rem(3);
+	margin-top: rem(44);
 
 	@include mq('md') {
-		margin-top: rem(76);
+		margin-top: rem(120);
 		position: relative;
 	}
 }
@@ -37,7 +36,7 @@
 		display: flex;
 		gap: rem(80);
 		position: absolute;
-		top: rem(44);
+		top: 0;
 		right: max(rem(40), 50vw - rem(540));
 	}
 }
