--- a/src/sass/page/_footer.scss
+++ b/src/sass/page/_footer.scss
@@ -1,11 +1,13 @@
 @use "global" as *;
 
 .footer {
+	margin-top: rem(102);
 	padding-top: rem(48);
 	padding-bottom: rem(56);
 	background-color: $color-accent;
 
 	@include mq('md') {
+		margin-top: rem(163);
 		padding-top: rem(80);
 		padding-bottom: rem(80);
 	}
