--- a/src/sass/module/_inner.scss
+++ b/src/sass/module/_inner.scss
@@ -1,19 +1,23 @@
 @use "global" as *;
 
-@if $startFrom == sp {
+@if $startFrom ==sp {
   .inner {
     width: 100%;
+    max-width: rem(600);
     padding-right: $padding-sp;
     padding-left: $padding-sp;
     margin-right: auto;
     margin-left: auto;
+
     @include mq("md") {
       max-width: $inner + strip-unit($padding-pc) * 2;
       padding-right: $padding-pc;
       padding-left: $padding-pc;
     }
   }
-} @else {
+}
+
+@else {
   .inner {
     max-width: $inner + strip-unit($padding-pc) * 2;
     padding-right: $padding-pc;
@@ -21,6 +25,7 @@
     width: 100%;
     margin-right: auto;
     margin-left: auto;
+
     @include mq("md") {
       padding-right: $padding-sp;
       padding-left: $padding-sp;
