--- a/src/sass/module/_voice-cards.scss
+++ b/src/sass/module/_voice-cards.scss
@@ -1,9 +1,9 @@
 @use "global" as *;
 
 .voice-cards {
-	max-width: rem(345);
-	margin-left: auto;
-	margin-right: auto;
+	// max-width: rem(345);
+	// margin-left: auto;
+	// margin-right: auto;
 
 	display: flex;
 	flex-direction: column;
@@ -11,9 +11,9 @@
 
 	@include mq('md') {
 		margin-top: rem(35);
-		max-width: initial;
-		margin-left: initial;
-		margin-right: initial;
+		// max-width: initial;
+		// margin-left: initial;
+		// margin-right: initial;
 
 		flex-direction: row;
 		row-gap: rem(80);
