--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -67,16 +67,16 @@
 }
 
 .contact__top {
-	max-width: rem(295);
-	margin-left: auto;
-	margin-right: auto;
+	// max-width: rem(295);
+	// margin-left: auto;
+	// margin-right: auto;
 
-	@include mq('md') {
-		max-width: initial;
-		margin-left: initial;
-		margin-right: initial;
-		max-width: rem(440);
-	}
+	// @include mq('md') {
+	// max-width: initial;
+	// margin-left: initial;
+	// margin-right: initial;
+	// 	max-width: rem(440);
+	// }
 }
 
 .contact__logoBlock {
