--- a/src/sass/page/_info.scss
+++ b/src/sass/page/_info.scss
@@ -17,17 +17,17 @@
 
 .info__wrap {
 	margin-top: rem(27);
-	max-width: rem(345);
-	margin-left: auto;
-	margin-right: auto;
+	// max-width: rem(345);
+	// margin-left: auto;
+	// margin-right: auto;
 
 	@include mq('md') {
 		margin-top: rem(37);
 		display: flex;
 		column-gap: rem(48);
-		max-width: initial;
-		margin-left: initial;
-		margin-right: initial;
+		// max-width: initial;
+		// margin-left: initial;
+		// margin-right: initial;
 	}
 }
 
