--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -35,15 +35,15 @@
 
 .price__wrap {
 	margin-top: rem(31);
-	max-width: rem(345);
-	margin-left: auto;
-	margin-right: auto;
+	// max-width: rem(345);
+	// margin-left: auto;
+	// margin-right: auto;
 
 	@include mq('md') {
 		margin-top: rem(45);
-		max-width: initial;
-		margin-left: initial;
-		margin-right: initial;
+		// max-width: initial;
+		// margin-left: initial;
+		// margin-right: initial;
 
 		display: flex;
 		flex-direction: row-reverse;
