--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -24,16 +24,15 @@
 }
 
 .blog-card__img {
-	aspect-ratio: 301 / 201;
+	// overflow: hidden;
 	width: 100%;
 }
 
 .blog-card__img img {
-
+	aspect-ratio: 301 / 201;
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
-
 }
 
 .blog-card__body {
