--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -9,18 +9,17 @@
 	}
 }
 
-.campaign-card__img {
+.campaign-card__img {}
+
+.campaign-card__img img {
 	aspect-ratio: 280 / 188;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
 
 	@include mq('md') {
 		aspect-ratio: 333 / 223;
 	}
-}
-
-.campaign-card__img img {
-	object-fit: cover;
-	width: 100%;
-	height: 100%;
 }
 
 .campaign-card__body {
