--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -44,32 +44,52 @@
 .about__image-large {
 	margin-left: auto;
 	height: rem(186);
-	aspect-ratio: 281 / 186;
+	// aspect-ratio: 281 / 186;
+	// overflow: hidden;
 
 	@include mq('md') {
-		aspect-ratio: 880 / 581;
+		// aspect-ratio: 880 / 581;
 		height: rem(581);
 	}
 }
 
 .about__image-small {
 	height: rem(194);
-	aspect-ratio: 128 / 194;
+	// aspect-ratio: 128 / 194;
+	// overflow: hidden;
+
 	position: absolute;
 	top: rem(-26);
 
 	@include mq('md') {
-		aspect-ratio: 400 / 606;
+		// aspect-ratio: 400 / 606;
 		height: rem(606);
 		top: rem(-80);
 	}
 }
 
-.about__image-large picture,
-.about__image-small picture {
+.about__image-large img {
+
+	aspect-ratio: 281 / 186;
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
+
+	@include mq('md') {
+		aspect-ratio: 880 / 581;
+	}
+}
+
+.about__image-small img {
+
+	aspect-ratio: 128 / 194;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+
+	@include mq('md') {
+		aspect-ratio: 400 / 606;
+	}
 }
 
 .about__content {
