--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
 .about {
-	margin: rem(87);
+	margin-top: rem(87);
 
 	@include mq('md') {
 		margin-top: rem(143);
@@ -24,13 +24,9 @@
 	}
 }
 
-// .about__inner.inner {
-// 	// max-width: rem(375);
+.about__inner {}
 
-// 	// @include mq('md') {
-// 	// 	max-width: $inner + strip-unit($padding-pc) * 2;
-// 	// }
-// }
+.about__content {}
 
 .about__images {
 	margin-top: rem(57);
@@ -43,29 +39,10 @@
 
 .about__image-large {
 	margin-left: auto;
-	height: rem(186);
-	// aspect-ratio: 281 / 186;
-	// overflow: hidden;
+	width: calc(281 / $calc-inner-sp * 100%);
+	position: relative;
 
-	@include mq('md') {
-		// aspect-ratio: 880 / 581;
-		height: rem(581);
-	}
-}
-
-.about__image-small {
-	height: rem(194);
-	// aspect-ratio: 128 / 194;
-	// overflow: hidden;
-
-	position: absolute;
-	top: rem(-26);
-
-	@include mq('md') {
-		// aspect-ratio: 400 / 606;
-		height: rem(606);
-		top: rem(-80);
-	}
+	@include mq('md') {}
 }
 
 .about__image-large img {
@@ -78,6 +55,14 @@
 	@include mq('md') {
 		aspect-ratio: 880 / 581;
 	}
+}
+
+.about__image-small {
+	margin-top: rem(-80);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: calc(128 / $calc-inner-sp * 100%);
 }
 
 .about__image-small img {
@@ -96,18 +81,22 @@
 	margin-top: rem(40);
 
 	@include mq('md') {
-		display: flex;
-		gap: rem(40);
-		margin-top: rem(63);
+		margin-top: 0;
+		// margin-left: auto;
+		// margin-top: rem(307);
+		// margin-left: max(rem(80), calc(50vw - rem(500)));
 		position: absolute;
-		max-width: rem(840);
-		top: rem(310);
-		right: max(80px, calc(50vw - 500px));
+		display: flex;
+
+		width: calc(840 / $calc-inner-pc * 100%);
+		top: 0;
+		left: 0;
 	}
 }
 
 .about__subtitle {
-	margin-top: rem(18);
+	// margin-top: rem(18);
+	width: 50%;
 }
 
 .about__subtitle-text {
@@ -128,11 +117,12 @@
 .about__wrap {
 	@include mq('md') {
 		max-width: rem(400);
+		width: 50%;
 	}
 }
 
 .about__text {
-	margin-top: rem(16);
+	// margin-top: rem(16);
 }
 
 .about__text-text {
