--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -1,31 +1,27 @@
 @use "global" as *;
 
 .blog-card {
-	padding: rem(16) rem(16) rem(24);
 	background-color: $color-white;
 	box-shadow: 2px 2px 10px rgba($color: #000, $alpha: 0.25);
 }
 
-.blog-card a {
+// .blog-card:not(:first-child) {
+// 	margin-top: rem(40);
+
+// 	@include mq('md') {
+// 		margin-top: 0;
+// 	}
+// }
+
+.blog-card__link {
+	padding: rem(16) rem(16) rem(24);
+	display: inline-block;
 	transition: opacity 0.3s ease;
-	will-change: opacity;
-}
-
-.blog-card a:hover {
-	opacity: $opacity-hover;
-}
-
-.blog-card:not(:first-child) {
-	margin-top: rem(40);
-
-	@include mq('md') {
-		margin-top: 0;
-	}
 }
 
 .blog-card__img {
 	// overflow: hidden;
-	width: 100%;
+	// width: 100%;
 }
 
 .blog-card__img img {
