--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -4,10 +4,12 @@
 	// max-width: rem(333);
 	// margin-left: auto;
 	// margin-right: auto;
+	display: grid;
+	row-gap: rem(40);
+	grid-template-columns: 1fr;
 
 	@include mq('md') {
 		margin-top: rem(85);
-		display: grid;
 		column-gap: rem(40);
 		row-gap: rem(80);
 		justify-content: space-between;
