--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -79,7 +79,7 @@
 		position: absolute;
 		display: flex;
 
-		width: 76%;
+		width: 72.18%;
 		top: 40%;
 		left: 20.6%;
 	}
@@ -113,17 +113,17 @@
 
 	@include mq('md') {
 		margin-top: 0;
-		max-width: rem(400);
+		margin-left: rem(41);
 		width: 50%;
 	}
 }
 
-.about__text {
-}
+.about__text {}
 
 .about__text-text {
 	@include mq('md') {
 		color: $color-white;
+		text-align: justify;
 	}
 }
 
