--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -3,6 +3,10 @@
 .campaign-card {
 	box-shadow: 2px 2px 10px rgb(0 0 0 / 0.25);
 	width: rem(280);
+	max-width: 100%;
+	display: flex;
+	flex-direction: column;
+	background-color: $color-white;
 
 	@include mq('md') {
 		width: rem(333);
@@ -23,11 +27,10 @@
 }
 
 .campaign-card__body {
-	padding: rem(16) rem(16) rem(24);
-	background-color: $color-white;
+	padding: rem(16) rem(16) 0;
 
 	@include mq('md') {
-		padding: rem(24) rem(16) rem(40);
+		padding: rem(24) rem(16) 0;
 	}
 }
 
@@ -54,6 +57,7 @@
 .campaign-card__title {
 	margin-top: rem(4);
 	padding-bottom: rem(8);
+	min-height: rem(32);
 
 	@include mq('md') {
 		padding-bottom: rem(8);
@@ -61,11 +65,16 @@
 }
 
 
-.campaign-card__title-text {
-	display: -webkit-box;
-	overflow: hidden;
-	-webkit-box-orient: vertical;
-	-webkit-line-clamp: 1;
+.campaign-card__title-text {}
+
+.campaign-card__foot {
+	margin-top: auto;
+	padding: 0 rem(16) rem(24);
+
+	@include mq('md') {
+		padding: 0 rem(16) rem(40);
+	}
+
 }
 
 .campaign-card__offer {
