clean：不要コメントを削除

--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -118,11 +118,7 @@
 	}
 }
 
-.voice-card__img {
-	// overflow: hidden;
-	// height: 100%;
-	// width: auto;
-}
+.voice-card__img {}
 
 .voice-card__img img {
 	aspect-ratio: 151 / 117;
