--- a/src/sass/page/_blog.scss
+++ b/src/sass/page/_blog.scss
@@ -24,18 +24,9 @@
 	z-index: -1;
 }
 
-.blog::after {
+.blog__inner {
 	@include mq('md') {
-		position: absolute;
-		content: "";
-		top: rem(24);
-		left: max(rem(40), calc(50vw - rem(620)));
-		width: rem(437);
-		height: rem(201);
-		background-image: url('../images/common/fish_white.png');
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: center center;
+		position: relative;
 	}
 }
 
@@ -46,6 +37,21 @@
 	@include mq('md') {
 		padding-left: $padding-pc;
 		padding-right: $padding-pc;
+	}
+}
+
+.blog__inner::after {
+	@include mq('md') {
+		position: absolute;
+		content: "";
+		top: rem(-76);
+		left: calc(50% - min(48.5vw, rem(620)));
+		width: rem(437);
+		height: rem(201);
+		background-image: url('../images/common/fish_white.png');
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: center center;
 	}
 }
 
