--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -5,16 +5,19 @@
 
 	@include mq('md') {
 		margin-top: rem(144);
-		position: relative;
 	}
 }
 
-.voice::before {
+.voice__inner {
+	position: relative;
+}
+
+.voice__inner::before {
 	@include mq('md') {
 		position: absolute;
 		content: "";
 		top: rem(-121);
-		left: max(rem(40), calc(50vw - rem(620)));
+		left: calc(50% - min(48.5vw, rem(620)));
 		width: rem(301);
 		height: rem(138);
 		background-image: url('../images/common/img-fish.svg');
@@ -25,12 +28,12 @@
 	}
 }
 
-.voice::after {
+.voice__inner::after {
 	@include mq('md') {
 		position: absolute;
 		content: "";
 		bottom: rem(-69);
-		right: max(rem(40), calc(50vw - rem(540)));
+		right: calc(50% - min(48.5vw, rem(540)));
 		width: rem(71);
 		height: rem(162);
 		background-image: url('../images/common/img-seahorse.png');
@@ -39,8 +42,6 @@
 		background-position: center center;
 	}
 }
-
-.voice__inner {}
 
 .voice__title {}
 
