--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -1,12 +1,6 @@
 @use "global" as *;
 
-.contact {
-	margin-top: rem(80);
-
-	@include mq('md') {
-		margin-top: rem(137);
-	}
-}
+.contact {}
 
 .contact__inner {
 	position: relative;
