fix：ドロワー関係3点修正
・ドロワーのメニューは上に寄せておく
・ドロワー内でスクロールしたときにロゴの位置を固定しておく
・ドロワー内でスクロールしたときにメニューは下に潜りこむようにする

--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -82,8 +82,8 @@
 	top: 0;
 	background-color: $color-accent;
 	z-index: $z-index-sp-nav;
-	overflow-x: hidden;
-	overflow-y: auto;
+	// overflow-x: hidden;
+	// overflow-y: auto;
 	opacity: 0;
 
 	transform: translateX(-105%);
