fix：ドロワー関係の修正
・ドロワーのロゴとヘッダー部分はSP版ヘッダーと共通化
・ドロワーのスクロールはヘッダーの下に潜り込むように高さを調整
・スクロールした際の下部の余白を調整

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -53,8 +53,9 @@ $color-text: $color-black;
 ////////////////////
 $z-index-toTop: 100;
 $z-index-header: 1000;
-$z-index-sp-nav: 2000;
-$z-index-hamburger: 2900;
+$z-index-sp-nav: 8888;
+$z-index-logo: 9999;
+$z-index-hamburger: 10000;
 
 ////////////////////
 // opacity
