--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -35,6 +35,7 @@
 
 .header__logoBlock {
 	height: inherit;
+	z-index: $z-index-logo;
 }
 
 .header__logoLink {
@@ -71,9 +72,7 @@
 }
 
 .header__sp-nav {
-
-	padding-top: rem(21);
-	padding-bottom: $padding-sp;
+	padding-top: rem(80);
 
 	width: 100%;
 	height: 100vh;
@@ -82,13 +81,10 @@
 	top: 0;
 	background-color: $color-accent;
 	z-index: $z-index-sp-nav;
-	// overflow-x: hidden;
-	// overflow-y: auto;
 	opacity: 0;
 
 	transform: translateX(-105%);
 	transition: transform 0.5s ease, opacity 0.5s ease;
-
 }
 
 .header__sp-nav.is-active {
