--- a/src/sass/module/_hamburger.scss
+++ b/src/sass/module/_hamburger.scss
@@ -17,6 +17,7 @@
 	position: absolute;
 	width: 100%;
 	height: 1px;
+	left: 0;
 	background-color: $color-white;
 	transition: transform 0.3s ease, opacity 0.3s ease;
 
