--- a/src/sass/module/_loading.scss
+++ b/src/sass/module/_loading.scss
@@ -6,59 +6,46 @@
 	top: 0;
 	left: 0;
 
-	// 中央寄せ
 	display: flex;
 	align-items: center;
 	flex-direction: column;
 	justify-content: center;
 
-	// 画面を覆う
 	width: 100%;
 	height: 100%;
 
-	color: #fff;
 	background-color: $color-accent;
 }
 
-.loading__wrap {
-	display: flex;
-}
+.loading__wrap {}
 
 .loading__left,
 .loading__right {
-	width: 50vw;
+	width: 100vw;
 	height: 100vh;
+	background-image: url('../images/common/mv_sp_1.jpg');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	background-clip: content-box;
+	opacity: 0;
+
+	@include mq('md') {
+		background-image: url('../images/common/mv_pc_1.jpg');
+	}
 }
 
 .loading__left {
-	background-color: red;
+	background-color: transparent;
+	background-position: 50% center;
+	position: relative;
+	clip-path: polygon(0 0, calc(50vw + 1px) 0, calc(50vw + 1px) 100%, 0 100%);
 }
 
 .loading__right {
-	background-color: blue;
+	position: absolute;
+	left: 0;
+	top: 0;
+	background-color: transparent;
+	background-position: 50% center;
+	clip-path: polygon(50% 0, 100% 0, 100% 100%, 50vw 100%);
 }
-
-// .loading__circle {
-// 	width: 50px;
-// 	height: 50px;
-// 	content: "";
-// 	animation: 2s linear loading infinite;
-// 	border: 2px solid #fff;
-// 	border-top: 2px solid $color-accent;
-// 	border-radius: 50%;
-// }
-
-// .loading__text {
-// 	font-size: 16px;
-// 	margin-top: 20px;
-// }
-
-// @keyframes loading {
-// 	0% {
-// 		transform: rotate(0);
-// 	}
-
-// 	100% {
-// 		transform: rotate(360deg);
-// 	}
-// }
