--- a/src/sass/page/_mv.scss
+++ b/src/sass/page/_mv.scss
@@ -48,7 +48,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	z-index: 10;
+	z-index: $z-index-mvTitle;
 	width: 100%;
 
 	@include mq('md') {
@@ -61,6 +61,8 @@
 }
 
 .mv__title {
+	opacity: 0;
+
 	font-family: $font-family-lato;
 	font-size: rem(40);
 	font-weight: $font-weight-regular;
@@ -70,13 +72,14 @@
 	color: $color-white;
 	text-align: center;
 
-
 	@include mq('md') {
 		font-size: rem(80);
 	}
 }
 
 .mv__subtitle {
+	opacity: 0;
+
 	margin-top: rem(12);
 	font-family: $font-family-eng;
 	font-weight: $font-weight-regular;
