--- a/src/sass/module/_loading.scss
+++ b/src/sass/module/_loading.scss
@@ -49,3 +49,9 @@
 .loading__right {
 	clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
 }
+
+.loading__header {}
+
+.loading__title {}
+
+.loading__subtitle {}
