fix：Loadingが3秒以内に終了するよう調整

--- a/src/sass/module/_loading.scss
+++ b/src/sass/module/_loading.scss
@@ -52,6 +52,10 @@
 
 .loading__header {}
 
-.loading__title {}
+.loading__title {
+	opacity: 0;
+}
 
-.loading__subtitle {}
+.loading__subtitle {
+	opacity: 0;
+}
