--- a/src/sass/module/_loading.scss
+++ b/src/sass/module/_loading.scss
@@ -6,15 +6,35 @@
 	top: 0;
 	left: 0;
 
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	justify-content: center;
-
 	width: 100vw;
 	height: 100vh;
 
 	background-color: $color-accent;
+}
+
+.loading__circle {
+	margin-left: auto;
+	margin-right: auto;
+	position: absolute;
+	top: calc(50% - 25px);
+	left: calc(50% - 25px);
+	width: 50px;
+	height: 50px;
+	content: "";
+	animation: 1s linear loading 4;
+	border: 2px solid #fff;
+	border-top: 2px solid $color-accent;
+	border-radius: 50%;
+}
+
+@keyframes loading {
+	0% {
+		transform: rotate(0);
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
 }
 
 .loading__wrap {
