fix：クラス名被りの対策と修正
・xxx__title -> xxx__section-title
・info__title -> info__subtitle

--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -169,12 +169,12 @@
 	}
 }
 
-.contact__title .section-title__eng {
+.contact__section-title .section-title__eng {
 	font-size: rem(80);
 	text-shadow: 0 4px 4px rgba($color: #000, $alpha: 0.25);
 }
 
-.contact__title .section-title__ja {
+.contact__section-title .section-title__ja {
 	margin-top: rem(-4);
 	text-shadow: 0 4px 4px rgba($color: #000, $alpha: 0.25);
 
