fix：横スクロールの解消

--- a/src/sass/page/_blog.scss
+++ b/src/sass/page/_blog.scss
@@ -14,7 +14,7 @@
 		content: "";
 		top: 0;
 		left: 0;
-		width: 100vw;
+		width: 100%;
 		height: rem(500);
 		background-image: url('../images/common/blog-bg_pc.jpg');
 		background-repeat: no-repeat;
