--- a/src/sass/page/_sp-nav.scss
+++ b/src/sass/page/_sp-nav.scss
@@ -40,7 +40,7 @@
 .sp-nav__wrap {
 	padding-top: rem(16);
 	padding-bottom: rem(110);
-	overflow: scroll;
+	overflow: auto;
 	height: calc(100vh - rem(80));
 
 	@include mq('md') {
