--- a/src/sass/module/_loading.scss
+++ b/src/sass/module/_loading.scss
@@ -12,6 +12,12 @@
 	background-color: $color-accent;
 }
 
+.loading.is-none {
+	opacity: 0;
+	z-index: -1;
+	visibility: hidden;
+}
+
 .loading__circle {
 	margin-left: auto;
 	margin-right: auto;
@@ -21,7 +27,7 @@
 	width: 50px;
 	height: 50px;
 	content: "";
-	animation: 1s linear loading 4;
+	animation: 1s linear loading infinite;
 	border: 2px solid $color-white;
 	border-top: 2px solid transparent;
 	border-radius: 50%;
