fix：campaignのボタンの下部が見切れるバグを修正、その他軽微な修正

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -51,7 +51,7 @@ $color-text: $color-black;
 ////////////////////
 // z-index
 ////////////////////
-$z-index-mvTitle: 10;
+$z-index-heroTitle: 10;
 $z-index-toTop: 100;
 $z-index-header: 1000;
 $z-index-sp-nav: 8888;
