--- a/src/sass/module/_heroTitle.scss
+++ b/src/sass/module/_heroTitle.scss
@@ -6,7 +6,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	z-index: $z-index-mvTitle;
+	z-index: $z-index-heroTitle;
 	width: 100%;
 }
 
