fix：DIVINGの文字をuppercaseを使った大文字表記へ変更

--- a/src/sass/module/_heroTitle.scss
+++ b/src/sass/module/_heroTitle.scss
@@ -20,6 +20,7 @@
 	line-height: 1;
 	color: $color-white;
 	text-align: center;
+	text-transform: uppercase;
 
 	@include mq('md') {
 		font-size: rem(80);
